--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,8 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/bambi_site?useSSL=false
-
-spring.datasource.username=root
-spring.datasource.password=
-
-#If a table doesn't exist it will create one
-#spring.jpa.hibernate.ddl-auto=update
-
 logging.level.org.hibernate.SQL=DEBUG
+
+spring.datasource.url=jdbc:mysql://bambishoes-server.mysql.database.azure.com:3306/bambishoes-database?serverTimezone=UTC
+spring.datasource.username=iyduhmknsq
+spring.datasource.password=3LKGE6Y6XM8QJSJV$
+
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.dialect =org.hibernate.dialect.MySQL8Dialect
