--- a/pom.xml
+++ b/pom.xml
@@ -17,19 +17,13 @@
 		<java.version>17</java.version>
 		<spring-cloud-azure.version>5.0.0</spring-cloud-azure.version>
 	</properties>
-	<repositories>
-   		<repository>
-      		<id>spring-milestones</id>
-			<name>Spring Milestones</name>
-      		<url>https://repo.spring.io/ui/native/libs-milestone/ </url>
-    		<releases>
-        		<enabled>true</enabled>
-    		</releases>
-    		<snapshots>
-     			<enabled>false</enabled>
-    		</snapshots>
-   		</repository>
-	</repositories>
+	<pluginRepositories>
+    	<pluginRepository>
+        	<id>spring-milestones</id>
+        	<name>Spring Milestones</name>
+        	<url>https://repo.spring.io/libs-milestone</url>
+    	</pluginRepository>
+	</pluginRepositories>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
