--- a/pom.xml
+++ b/pom.xml
@@ -16,13 +16,11 @@
 	<properties>
 		<java.version>17</java.version>
 		<spring-cloud-azure.version>5.0.0</spring-cloud-azure.version>
-		<pluginRepositories>
-    		<pluginRepository>
-        		<id>spring-milestones</id>
-        		<name>Spring Milestones</name>
-        		<url>https://repo.spring.io/libs-milestone</url>
-    		</pluginRepository>
-		</pluginRepositories>
+		<repository>
+    		<id>spring-milestone</id>
+    		<name>Spring Milestone Repository</name>
+    		<url>https://repo.spring.io/milestone</url>
+		</repository>
 	</properties>
 	<dependencies>
 		<dependency>
