--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,18 @@
 		<java.version>17</java.version>
 		<spring-cloud-azure.version>5.0.0</spring-cloud-azure.version>
 	</properties>
+
+	<repository>
+    	<id>jitpack.io</id>
+    	<url>https://jitpack.io</url>
+	</repository>
+
 	<dependencies>
+		<dependency>
+    		<groupId>com.github.Anish8659</groupId>
+    		<artifactId>spring-boot-ssl-truststore-gen</artifactId>
+    		<version>3d6cf29</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
