--- a/pom.xml
+++ b/pom.xml
@@ -17,12 +17,12 @@
 		<java.version>17</java.version>
 		<spring-cloud-azure.version>5.0.0</spring-cloud-azure.version>
 	</properties>
-
-	<repository>
-    	<id>jitpack.io</id>
-    	<url>https://jitpack.io</url>
-	</repository>
-
+	<repositories>
+		<repository>
+    		<id>jitpack.io</id>
+    		<url>https://jitpack.io</url>
+		</repository>
+	</repositories>
 	<dependencies>
 		<dependency>
     		<groupId>com.github.Anish8659</groupId>
