--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 logging.level.org.hibernate.SQL=DEBUG
 
-spring.datasource.url=jdbc:mysql://bambishoes-server.mysql.database.azure.com:3306/bambishoes-database?useSSL=true?requireSSL=true?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://bambishoes-server.mysql.database.azure.com:3306/bambishoes-database?useSSL=true&requireSSL=true&serverTimezone=UTC
 spring.datasource.username=iyduhmknsq
 spring.datasource.password=3LKGE6Y6XM8QJSJV$
 
