--- a/pom.xml
+++ b/pom.xml
@@ -24,11 +24,11 @@
 		</repository>
 	</repositories>
 	<dependencies>
-		<dependency>
+		<!-- <dependency>
     		<groupId>com.github.Anish8659</groupId>
     		<artifactId>spring-boot-ssl-truststore-gen</artifactId>
     		<version>3d6cf29</version>
-		</dependency>
+		</dependency> -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
