--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,4 @@ spring.datasource.password=3LKGE6Y6XM8QJSJV$
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.dialect =org.hibernate.dialect.MySQL8Dialect
 
-spring.datasource.url=jdbc:mysql://bambishoes-server.mysql.database.azure.com:3306/bambishoes-database?useUnicode=true&characterEncoding=UTF-8&characterSetResults=UTF-8&verifyServerCertificate=true&useSSL=true&requireSSL=true&clientCertificateKeyStoreUrl="ssl/DigiCertGlobalRootCA.crt.pem"&trustCertificateKeyStoreUrl="ssl/DigiCertGlobalRootCA.crt.pem"
+spring.datasource.url=jdbc:mysql://bambishoes-server.mysql.database.azure.com:3306/bambishoes-database?useUnicode=true&characterEncoding=UTF-8&characterSetResults=UTF-8&verifyServerCertificate=true&useSSL=true&requireSSL=true&clientCertificateKeyStoreUrl="file://ssl/DigiCertGlobalRootCA.crt.pem"&trustCertificateKeyStoreUrl="file://ssl/DigiCertGlobalRootCA.crt.pem"
