--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,5 +14,5 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql=true
 spring.datasource.url=jdbc:mysql://bambishoes-server.mysql.database.azure.com:3306/bambishoes-database?useSSL=true
-spring.datasource.username=vczksknlfx@bambishoes-server
+spring.datasource.username=vczksknlfx
 spring.datasource.password=8R626IQF8V3U34MS$
