--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,6 @@ spring.jpa.properties.hibernate.dialect =org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql=true
-spring.datasource.url=jdbc:mysql://bambishoes-server.mysql.database.azure.com:3306/bambishoes-database?useSSL=true
+spring.datasource.url=jdbc:mysql://bambishoes-server.mysql.database.azure.com:3306/bambishoes-database?serverTimezone=UTC&sslmode=required
 spring.datasource.username=vczksknlfx
 spring.datasource.password=8R626IQF8V3U34MS$
