--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-logging.level.org.hibernate.SQL=DEBUG
+# logging.level.org.hibernate.SQL=DEBUG
 
 # spring.datasource.url=jdbc:mysql://bambishoes-server.mysql.database.azure.com:3306/bambishoes-database?useSSL=true
 # spring.datasource.username=vczksknlfx@bambishoes-server
@@ -10,9 +10,9 @@ logging.level.org.hibernate.SQL=DEBUG
 # spring.datasource.url=jdbc:mysql://bambishoes-server.mysql.database.azure.com:3306/bambishoes-database?useUnicode=true&characterEncoding=UTF-8&characterSetResults=UTF-8&verifyServerCertificate=true&useSSL=true&requireSSL=true&clientCertificateKeyStoreUrl=file:ssl/DigiCertGlobalRootCA.crt.pem&trustCertificateKeyStoreUrl=file:ssl/DigiCertGlobalRootCA.crt.pem
 
 
-spring.jpa.hibernate.ddl-auto=create
+# spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.show-sql=true
+# spring.jpa.show-sql=true
 spring.datasource.url=jdbc:mysql://bambishoes-server.mysql.database.azure.com:3306/bambishoes-database?serverTimezone=UTC&sslmode=required
 spring.datasource.username=vczksknlfx@bambishoes-server
 spring.datasource.password=8R626IQF8V3U34MS$
