--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,6 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.datasource.url=jdbc:mysql://bambishoes-server.mysql.database.azure.com:3306/bambishoes-database?serverTimezone=UTC&sslmode=required
 spring.datasource.username=vczksknlfx@bambishoes-server
 spring.datasource.password=8R626IQF8V3U34MS$
+
+spring.web.resources.static-locations[0]=file:src/main/resources/static/
+spring.web.resources.static-locations[1]=classpath:/static/
